--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -1,5 +1,12 @@
 .home__travels {
     .datepicker-show {
+        &:after {
+            @apply relative block;
+            content: "";
+            background-image: url("data:image/svg+xml,%3Csvg width='1' height='60' viewBox='0 0 1 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline opacity='0.5' x1='0.5' y1='0.5' x2='0.500003' y2='59.5' stroke='%231F294C' stroke-linecap='round' stroke-dasharray='4 4'/%3E%3C/svg%3E%0A");
+            background-repeat: no-repeat;
+            @apply w-px h-60 bg-center bg-contain;
+        }
         span {
             @apply transition-colors ease-in-out duration-500;
         }
@@ -11,19 +18,50 @@
     }
     .border-custom {
         @apply relative;
-        &:after {
+        &:before {
             @apply relative block;
             content: "";
             background-image: url("data:image/svg+xml,%3Csvg width='1' height='60' viewBox='0 0 1 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline opacity='0.5' x1='0.5' y1='0.5' x2='0.500003' y2='59.5' stroke='%231F294C' stroke-linecap='round' stroke-dasharray='4 4'/%3E%3C/svg%3E%0A");
             background-repeat: no-repeat;
-            @apply w-px h-60 bg-center bg-contain
-          
+            @apply w-px h-60 bg-center bg-contain;
         }
     }
     .filter-button {
-       @apply cursor-pointer;
-       &:hover {
-        @apply text-color1;
-       }
+        @apply cursor-pointer;
+        &:hover {
+            @apply text-color1;
+        }
+    }
+    
+    .miejsce-radio,
+    .kategoria-radio {
+        @apply cursor-pointer;
+        .hidden-radio {
+            @apply hidden;
+        }
+        
+        label {
+            @apply flex items-center;
+            &::before {
+                @apply flex items-center justify-center transition;
+                @apply h-[30px] w-[30px];
+                @apply shrink-0;
+                @apply relative;
+                @apply mr-2.5;
+                content: "";
+                background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='30' height='30' rx='15' transform='matrix(-1 0 0 1 30 0)' fill='white'/%3E%3Crect x='-0.5' y='0.5' width='29' height='29' rx='14.5' transform='matrix(-1 0 0 1 29 0)' stroke='%230F1425' stroke-opacity='0.2'/%3E%3C/svg%3E%0A");
+                @apply bg-no-repeat bg-center block;
+            }
+        }
+        
+        input:checked {
+          + label {
+            &::before {
+                
+                background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='30' height='30' rx='15' transform='matrix(-1 0 0 1 30 0)' fill='white'/%3E%3Crect x='-0.5' y='0.5' width='29' height='29' rx='14.5' transform='matrix(-1 0 0 1 29 0)' stroke='%230F1425' stroke-opacity='0.2'/%3E%3Crect width='16' height='16' rx='8' transform='matrix(-1 0 0 1 23 7)' fill='%230296D8'/%3E%3C/svg%3E%0A");
+               
+            }
+          }
+        }
     }
 }
