--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -28,6 +28,7 @@
     }
     .filter-button {
         @apply cursor-pointer;
+        @apply transition-colors ease-in-out duration-500;
         &:hover {
             @apply text-color1;
         }
@@ -36,6 +37,10 @@
     .miejsce-radio,
     .kategoria-radio {
         @apply cursor-pointer;
+        @apply transition-colors ease-in-out duration-500;
+        &:hover {
+            @apply text-color1;
+        }
         .hidden-radio {
             @apply hidden;
         }
@@ -64,4 +69,53 @@
           }
         }
     }
+    
+}
+.ss-main {
+    @apply h-60 px-5 py-[15px] rounded-lg border border-colorObramowanie #{!important};
+    &:focus {
+        @apply shadow-none;
+    }
+   
+    .ss-arrow {
+        width: 20px;
+        height: 15px;
+       path {
+        @apply stroke-color3;
+        stroke-width: 15px;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+       }
+    }
+    
+}
+.select-custom {
+    @apply w-[250px];
+    &__inside {
+        @apply flex items-center justify-center gap-2.5;
+        img {
+            @apply w-30 h-30 object-cover object-center rounded-full;
+        }
+    }
+}
+
+.ss-content {
+    @apply rounded-lg border-none;
+    .ss-list {
+        @apply rounded-lg border border-colorObramowanie;
+        .ss-option {
+            @apply px-5 py-2.5;
+            &:not(:last-child) {
+                @apply border-b border-colorObramowanie;
+            }
+            &:hover {
+                @apply bg-color3/50;
+            }
+            &.ss-selected {
+                @apply bg-color1/50 #{!important};
+            }
+            
+        }
+    }
+
 }
