--- a/resources/styles/abstracts/_airdatepicker.scss
+++ b/resources/styles/abstracts/_airdatepicker.scss
@@ -501,12 +501,12 @@
     --adp-transition-ease: ease-out;
     --adp-transition-offset: 8px;
     --adp-background-color: #fff;
-    --adp-background-color-hover: #f0f0f0;
+    --adp-background-color-hover: theme('colors.color4');
     --adp-background-color-active: #eaeaea;
     --adp-background-color-in-range: rgba(92, 196, 239, .1);
     --adp-background-color-in-range-focused: rgba(92, 196, 239, .2);
-    --adp-background-color-selected-other-month-focused: #8ad5f4;
-    --adp-background-color-selected-other-month: #a2ddf6;
+    --adp-background-color-selected-other-month-focused: theme('colors.color3');
+    --adp-background-color-selected-other-month: theme('colors.color3');
     --adp-color: #4a4a4a;
     --adp-color-secondary: theme('colors.color3');
     --adp-accent-color: theme('colors.color1');
@@ -515,10 +515,10 @@
     --adp-color-disabled: #aeaeae;
     --adp-color-disabled-in-range: #939393;
     --adp-color-other-month-hover: #c5c5c5;
-    --adp-border-color: #dbdbdb;
-    --adp-border-color-inner: #efefef;
-    --adp-border-radius: 4px;
-    --adp-border-color-inline: #d7d7d7;
+    --adp-border-color: theme('colors.colorObramowanie');
+    --adp-border-color-inner: theme('colors.colorObramowanie');
+    --adp-border-radius: 8px;
+    --adp-border-color-inline: theme('colors.colorObramowanie');
     --adp-nav-height: 32px;
     --adp-nav-arrow-color: var(--adp-color-secondary);
     --adp-nav-action-size: 32px;
