--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -17,6 +17,7 @@
 @import 'components/buttons';
 @import 'components/menu';
 @import 'components/spinner';
+@import 'components/post-card';
 // @import 'components/form';
 @import 'components/swiper';
 
