--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -121,3 +121,31 @@
 
 }
 
+.change-view {
+    .view {
+        @apply cursor-pointer;
+        svg {
+            path {
+                @apply transition-all duration-500 ease-in-out;
+            }
+        }
+        &:hover {
+            svg {
+                path {
+                  
+                    @apply fill-color2;
+                }
+            }
+        }
+        &.active {
+            svg {
+                path {
+                  
+                    @apply fill-color2;
+                }
+            }
+        }
+        
+    }
+
+}
