office work today

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -18,6 +18,8 @@
 @import 'components/menu';
 @import 'components/spinner';
 @import 'components/post-card';
+@import 'components/posts';
+@import 'components/navi';
 // @import 'components/form';
 @import 'components/swiper';
 
