--- a/resources/styles/components/_buttons.scss
+++ b/resources/styles/components/_buttons.scss
@@ -1,6 +1,6 @@
 .btn {
     
-    @apply text-button uppercase max-sm:tracking-[0.5px] rounded-lg box-border border-colorObramowanie border;
+    @apply text-button uppercase max-sm:tracking-[0.5px] rounded-lg box-border border-colorObramowanie border dark:border-colorContrast;
     @apply min-w-[200px] inline-flex items-center justify-center h-half lg:h-60 ;
     @apply transition-all duration-500 ease-in-out relative px-5;
     @apply text-color5 overflow-hidden;
@@ -8,7 +8,7 @@
         @apply relative z-10;
     }
     &--primary {
-        @apply bg-color3;
+        @apply bg-color3 dark:bg-black;
         &:after {
             content: "";
             background: linear-gradient(265deg, #1F294C 0%, #0296D8 100%);
