--- a/resources/styles/components/_navi.scss
+++ b/resources/styles/components/_navi.scss
@@ -8,16 +8,21 @@
                 a {
                     @apply w-60 h-60 flex items-center justify-center;
                     @apply transition-all duration-500 ease-in-out;
-                    @apply border border-colorObramowanie rounded-lg;
+                    @apply border border-colorObramowanie rounded-lg dark:border-colorContrast;
                     @apply text-sm leading-[30px] font-medium cursor-pointer;
                     &:hover {
-                        @apply text-white bg-color3;
+                        @apply text-white bg-color3 dark:bg-colorContrast
                     }
                 }
                 &.active {
                     a {
-                        @apply text-white bg-color3 pointer-events-none;
+                        @apply text-white bg-color3 pointer-events-none dark:bg-colorContrast;
                     }
+                }
+            }
+            svg {
+                path {
+                    @apply dark:stroke-colorContrast;
                 }
             }
         }
