--- a/resources/styles/components/_swiper.scss
+++ b/resources/styles/components/_swiper.scss
@@ -6,7 +6,7 @@
     &-bullet {
         @apply inline-block h-5 w-5 rounded-full m-0 opacity-100 bg-white border border-solid border-white transition-all duration-500 ease-in-out #{!important};
         &-active {
-            @apply bg-color3 border-color3 #{!important};
+            @apply bg-color3 border-color3 dark:bg-colorContrast dark:border-colorContrast #{!important};
         }
        
     }
