--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -58,3 +58,9 @@ body {
     }
   }
 }
+
+
+.hidden-radio.kategoria_wycieczki-radio, .kategoria-radio label {
+  position: relative;
+  z-index: 10;
+}
