--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -111,7 +111,7 @@
     
 }
 .select-custom {
-    @apply w-[250px] dark:bg-black dark:text-white #{!important};
+    @apply w-[250px] dark:bg-black  dark:text-colorContrast #{!important};
     &__inside {
         @apply flex items-center justify-center gap-2.5;
         img {
@@ -128,7 +128,7 @@
         @apply rounded-lg border border-colorObramowanie;
         .ss-option {
             @apply px-5 py-2.5;
-            @apply dark:text-white;
+            @apply dark:text-colorContrast;
             &:not(:last-child) {
                 @apply border-b border-colorObramowanie;
             }
@@ -144,7 +144,7 @@
 
 }
 .ss-placeholder {
-    @apply dark:text-white #{!important};
+    @apply dark:text-colorContrast #{!important};
 }
 
 .change-view {
