--- a/resources/styles/components/_spinner.scss
+++ b/resources/styles/components/_spinner.scss
@@ -4,13 +4,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
     display: flex;
     justify-content: center; // Center horizontally
     align-items: center; // Center vertically
     @apply bg-color4/50;
     @apply transition-all ease-in-out duration-500;
     z-index: 9999;
+    cursor: wait;
     .spinner {
       @apply w-half-mobile lg:w-half;
       padding: 8px;
