--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -58,6 +58,13 @@ body {
     }
   }
 }
+.post-permalink {
+  svg {
+    path {
+      @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
+    }
+  }
+}
 
 
 .kategoria-radio {
