--- a/resources/styles/components/_posts.scss
+++ b/resources/styles/components/_posts.scss
@@ -1,14 +1,21 @@
-.posts {
-    .post-time, 
-    .post-date,
-    .post-price
-    {
-        svg {
-            path {
-              @apply transition-all duration-500 ease-in-out dark:fill-colorContrast;
-            }
+.post-time, 
+.post-date,
+.post-price {
+    svg {
+        path {
+            @apply transition-all duration-500 ease-in-out dark:fill-colorContrast;
         }
     }
+}
+.post-location {
+    svg {
+        path {
+            @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
+        }
+    }
+}
+
+.posts {
     &.card-grid {
         @apply xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1;
         .post {
