--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -67,25 +67,31 @@
         label {
             @apply flex items-center;
             &::before {
+                
                 @apply flex items-center justify-center transition;
                 @apply h-[30px] w-[30px];
                 @apply shrink-0;
                 @apply relative;
-                @apply mr-2.5;
                 content: "";
                 background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='30' height='30' rx='15' transform='matrix(-1 0 0 1 30 0)' fill='white'/%3E%3Crect x='-0.5' y='0.5' width='29' height='29' rx='14.5' transform='matrix(-1 0 0 1 29 0)' stroke='%230F1425' stroke-opacity='0.2'/%3E%3C/svg%3E%0A");
                 @apply bg-no-repeat bg-center block;
             }
+            
         }
         
         input:checked {
           + label {
             &::before {
-                
+                @apply animate-scaleUp;
                 background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='30' height='30' rx='15' transform='matrix(-1 0 0 1 30 0)' fill='white'/%3E%3Crect x='-0.5' y='0.5' width='29' height='29' rx='14.5' transform='matrix(-1 0 0 1 29 0)' stroke='%230F1425' stroke-opacity='0.2'/%3E%3Crect width='16' height='16' rx='8' transform='matrix(-1 0 0 1 23 7)' fill='%230296D8'/%3E%3C/svg%3E%0A");
                
             }
           }
+        }
+    }
+    .miejsce-radio {
+        label {
+            @apply flex gap-2.5;
         }
     }
     
