--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -25,6 +25,7 @@
 
 // // - Pages 
 @import 'pages/home';
+@import 'pages/single';
 // @import 'pages/single-produkty';
 // @import 'pages/contact';
 
