--- a/resources/styles/components/_menu.scss
+++ b/resources/styles/components/_menu.scss
@@ -48,11 +48,11 @@ nav {
     }
 }
 .mobile-menu {
-    @apply opacity-0 top-0 left-0 w-full h-full z-[9999];
+    @apply opacity-0 top-full left-0 w-full h-fit z-50;
     @apply transition-all duration-500 ease-in-out;
-    @apply bg-white shadow-cien-2;
+    @apply bg-white dark:bg-black shadow-cien-2;
     &.active {
-        @apply translate-y-0 opacity-100;
+        @apply translate-x-0 opacity-100;
     }
 }
 
