--- a/resources/styles/components/_swiper.scss
+++ b/resources/styles/components/_swiper.scss
@@ -1,10 +1,10 @@
 .swiper-pagination {
     
     &-bullets {
-        @apply w-fit right-30 left-auto bottom-30 flex justify-center lg:space-x-5 space-x-2 #{!important};
+        @apply w-fit right-5 bottom-5 lg:right-30 left-auto lg:bottom-30 flex justify-center lg:space-x-5 space-x-2 #{!important};
     }
     &-bullet {
-        @apply inline-block h-5 w-5 rounded-full m-0 opacity-100 bg-white border border-solid border-white transition-all duration-500 ease-in-out #{!important};
+        @apply inline-block h-2.5 w-2.5 lg:h-5 lg:w-5 rounded-full m-0 opacity-100 bg-white border border-solid border-white transition-all duration-500 ease-in-out #{!important};
         &-active {
             @apply bg-color3 border-color3 dark:bg-colorContrast dark:border-colorContrast #{!important};
         }
