--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         Brikol
+Theme Name:         SzczecinToursPlanner
 Theme URI:          https://roots.io/sage/
 Description:        Custom theme by GregorMedia based on Sage10 - Sage is a WordPress starter theme.
 Version:            10.x-dev
