--- a/resources/styles/pages/_home.scss
+++ b/resources/styles/pages/_home.scss
@@ -80,6 +80,7 @@
         }
         
         input:checked {
+            @apply hidden;
           + label {
             &::before {
                 @apply animate-scaleUp;
