--- a/resources/styles/components/_posts.scss
+++ b/resources/styles/components/_posts.scss
@@ -1,100 +1,135 @@
-.post-time, 
+.post-time,
 .post-date,
 .post-price {
-    svg {
-        path {
-            @apply transition-all duration-500 ease-in-out dark:fill-colorContrast;
-        }
+  svg {
+    path {
+      @apply transition-all duration-500 ease-in-out dark:fill-colorContrast;
     }
+  }
 }
 .post-location {
-    svg {
-        path {
-            @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
-        }
+  svg {
+    path {
+      @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
     }
+  }
 }
 
 .posts {
-    &.card-grid {
-        @apply 3xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1;
-        .post {
-            &-desc {
-                @apply mt-5 lg:mt-30;
-            }
-            
-            @apply flex flex-col;
-            &-content {
-                @apply p-2.5 lg:p-5 flex flex-col;
-               
-            }
-            &-title {
-                @apply text-h5 lg:text-h4;
-            }
-            &-image {
-               @apply overflow-hidden  rounded-t-lg ;
-               &:hover {
-                img {
-                    @apply transform scale-125 ;
-                }
-               }
-               img {
-                @apply h-[160px] aspect-[385/160]  md:h-[200px] md:aspect-[385/200] lg:h-[240px] md:aspect-[385/240] xl:h-[260px] md:aspect-[385/260] rounded-t-lg transition-all duration-500 ease-in-out;
-               }
-            }
-            &-permalink {
-                @apply flex items-center max-md:flex-wrap gap-5 md:items-end justify-center md:justify-between mt-auto md:pt-12 pt-5;
-                svg {
-                    path {
-                    @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
-                    }
-                }
+  &.card-grid {
+    @apply 3xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1;
+    .post {
+      &-desc {
+        @apply mt-5 lg:mt-30;
+      }
 
-            }
-            &-info {
-                @apply flex flex-wrap flex-row justify-between items-center lg:gap-y-3 lg:gap-2 max-md:gap-1;
-            }
-           
+      @apply flex flex-col;
+      &-content {
+        @apply p-2.5 lg:p-5 flex flex-col;
+      }
+      &-title {
+        @apply text-h5 lg:text-h4;
+      }
+      &-image {
+        @apply overflow-hidden  rounded-t-lg;
+        &:hover {
+          img {
+            @apply transform scale-125;
+          }
         }
+        img {
+          @apply h-[160px] aspect-[385/160]  md:h-[200px] md:aspect-[385/200] lg:h-[240px] md:aspect-[385/240] xl:h-[260px] md:aspect-[385/260] rounded-t-lg transition-all duration-500 ease-in-out;
+        }
+      }
+      &-permalink {
+        @apply flex items-center max-md:flex-wrap gap-5 md:items-end justify-center md:justify-between mt-auto md:pt-12 pt-5;
+        svg {
+          path {
+            @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
+          }
+        }
+      }
+      &-info {
+        @apply flex flex-wrap flex-row justify-between items-center lg:gap-y-3 lg:gap-2 max-md:gap-1;
+      }
     }
-    &.list-grid {
-        @apply grid-cols-1;
-        .post {
-            @apply grid grid-cols-12; 
-            &-content {
-                @apply p-10 col-span-8 grid grid-cols-8 gap-5;
+  }
+  &.list-grid {
+    @media (min-width: 991px) {
+      @apply grid-cols-1;
+      .post {
+        @apply grid grid-cols-12;
+        &-content {
+          @apply p-10 col-span-8 grid grid-cols-8 gap-5;
+        }
+        &-title {
+          @apply text-h4 lg:text-h3;
+        }
+        &-image {
+          @apply col-span-4 rounded-l-lg overflow-hidden;
+          &:hover {
+            img {
+              @apply transform scale-125;
             }
-            &-title {
-                @apply text-h4 lg:text-h3;
+          }
+          img {
+            @apply h-[320px] aspect-[520/320] rounded-l-lg transition-all duration-500 ease-in-out;
+          }
+        }
+        &-desc {
+          @apply -order-1 col-span-6;
+        }
+        &-info {
+          @apply col-span-2;
+          @apply flex flex-col justify-between;
+        }
+        &-permalink {
+          @apply flex items-center mt-auto pt-12 gap-10;
+          svg {
+            path {
+              @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
             }
-            &-image {
-                @apply col-span-4 rounded-l-lg overflow-hidden;
-                &:hover {
-                    img {
-                        @apply transform scale-125 ;
-                    }
-                   }
-                img {
-                    @apply h-[320px] aspect-[520/320] rounded-l-lg transition-all duration-500 ease-in-out;
-                }
-            }
-            &-desc {
-                @apply -order-1 col-span-6;
-            }
-            &-info {
-                @apply col-span-2;
-                @apply flex flex-col justify-between;
-            }
-            &-permalink {
-                @apply flex items-center mt-auto pt-12 gap-10;
-                svg {
-                    path {
-                    @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
-                    }
-                }
-            }
+          }
+        }
+      }
+    }
+    @media (max-width: 991px) {
+      @apply 3xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1;
+      .post {
+        &-desc {
+          @apply mt-5 lg:mt-30;
+        }
 
+        @apply flex flex-col;
+        &-content {
+          @apply p-2.5 lg:p-5 flex flex-col;
         }
+        &-title {
+          @apply text-h5 lg:text-h4;
+        }
+        &-image {
+          @apply overflow-hidden  rounded-t-lg;
+          &:hover {
+            img {
+              @apply transform scale-125;
+            }
+          }
+          img {
+            @apply h-[160px] aspect-[385/160]  md:h-[200px] md:aspect-[385/200] lg:h-[240px] md:aspect-[385/240] xl:h-[260px] md:aspect-[385/260] rounded-t-lg transition-all duration-500 ease-in-out;
+          }
+        }
+        &-permalink {
+          @apply flex items-center max-md:flex-wrap gap-5 md:items-end justify-center md:justify-between mt-auto md:pt-12 pt-5;
+          svg {
+            path {
+              @apply transition-all duration-500 ease-in-out dark:stroke-colorContrast;
+            }
+          }
+        }
+        &-info {
+          @apply flex flex-wrap flex-row justify-between items-center lg:gap-y-3 lg:gap-2 max-md:gap-1;
+        }
+      }
     }
+  }
 }
-    
